added calendar entry types

--- a/app/components/calendar-list/calendar-list.component.html
+++ b/app/components/calendar-list/calendar-list.component.html
@@ -22,25 +22,25 @@
                         </tr>
                         </tfoot>
                         <tbody id="bookingTableBody">
-                        <tr>
-                            <td>Exchange</td>
+                        <tr *ngFor="let item of bookingDays">
+                            <td>{{item.EntryTypeDesc}}</td>
                             <td>
                                 <div class="form-group date-group">
                                     <i class="material-icons">insert_invitation</i>
-                                    <span class="text-value">08/17/2017</span>
+                                    <span class="text-value">{{formattedDate(item.CheckIn)}}</span>
                                 </div>
                             </td>
                             <td>
                                 <div class="form-group date-group">
                                     <i class="material-icons">insert_invitation</i>
-                                    <span class="text-value">08/17/2017</span>
+                                    <span class="text-value">{{formattedDate(item.CheckOut)}}</span>
                                 </div>
                             </td>
                             <td class="text-right">
                                 <button class="btn btn-simple btn-view-more btn-icon">
                                     <i class="material-icons">more</i>View More
                                 </button>
-                                <button class="btn btn-simple btn-edit btn-icon" (click)="editEvent(1)">
+                                <button class="btn btn-simple btn-edit btn-icon" (click)="editEvent(item.Id)">
                                     <i class="material-icons">edit</i>Edit
                                 </button>
                                 <button class="btn btn-simple btn-delete btn-icon"
@@ -62,46 +62,46 @@
                                 </popover-content>
                             </td>
                         </tr>
-                        <tr>
-                            <td>Internal</td>
-                            <td>
-                                <div class="form-group date-group">
-                                    <i class="material-icons">insert_invitation</i>
-                                    <span class="text-value">08/17/2017</span>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="form-group date-group">
-                                    <i class="material-icons">insert_invitation</i>
-                                    <span class="text-value">08/17/2017</span>
-                                </div>
-                            </td>
-                            <td class="text-right">
-                                <button class="btn btn-simple btn-view-more btn-icon">
-                                    <i class="material-icons">more</i>View More
-                                </button>
-                                <button class="btn btn-simple btn-edit btn-icon" (click)="editEvent(2)" >
-                                    <i class="material-icons">edit</i>Edit
-                                </button>
-                                <button class="btn btn-simple btn-delete btn-icon"
-                                        type="button"
-                                        [popover]="i">
-                                    <i class="material-icons">delete</i>Remove
-                                </button>
-                                <popover-content #i
-                                                 placement="left"
-                                                 [animation]="true"
-                                                 [closeOnClickOutside]="true">
-                                    <h3>Are you sure?</h3>
-                                    <button type="button" class="btn btn-danger font-14">
-                                        Yes, remove
-                                    </button>
-                                    <button type="button" class="btn btn-success-green font-14"
-                                            (click)="i.hide($event)">Cancel
-                                    </button>
-                                </popover-content>
-                            </td>
-                        </tr>
+                        <!--<tr>-->
+                            <!--<td>Internal</td>-->
+                            <!--<td>-->
+                                <!--<div class="form-group date-group">-->
+                                    <!--<i class="material-icons">insert_invitation</i>-->
+                                    <!--<span class="text-value">08/17/2017</span>-->
+                                <!--</div>-->
+                            <!--</td>-->
+                            <!--<td>-->
+                                <!--<div class="form-group date-group">-->
+                                    <!--<i class="material-icons">insert_invitation</i>-->
+                                    <!--<span class="text-value">08/17/2017</span>-->
+                                <!--</div>-->
+                            <!--</td>-->
+                            <!--<td class="text-right">-->
+                                <!--<button class="btn btn-simple btn-view-more btn-icon">-->
+                                    <!--<i class="material-icons">more</i>View More-->
+                                <!--</button>-->
+                                <!--<button class="btn btn-simple btn-edit btn-icon" (click)="editEvent(2)" >-->
+                                    <!--<i class="material-icons">edit</i>Edit-->
+                                <!--</button>-->
+                                <!--<button class="btn btn-simple btn-delete btn-icon"-->
+                                        <!--type="button"-->
+                                        <!--[popover]="i">-->
+                                    <!--<i class="material-icons">delete</i>Remove-->
+                                <!--</button>-->
+                                <!--<popover-content #i-->
+                                                 <!--placement="left"-->
+                                                 <!--[animation]="true"-->
+                                                 <!--[closeOnClickOutside]="true">-->
+                                    <!--<h3>Are you sure?</h3>-->
+                                    <!--<button type="button" class="btn btn-danger font-14">-->
+                                        <!--Yes, remove-->
+                                    <!--</button>-->
+                                    <!--<button type="button" class="btn btn-success-green font-14"-->
+                                            <!--(click)="i.hide($event)">Cancel-->
+                                    <!--</button>-->
+                                <!--</popover-content>-->
+                            <!--</td>-->
+                        <!--</tr>-->
                         </tbody>
                     </table>
                     {{!datatableInited ? finishReading() : "" }}
