added update availability

--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -39,6 +39,7 @@
                     <calendar-list-cmp *ngIf="!isCalendarView"
                                        [group]="availabilityForm"
                                        [bookingDays]="bookingDays"
+                                       (deleteAvailability)="handlerDeleteAvailability($event)"
                                        (editAvailability)="handlerEditAvailability($event)"
                                        [errorForm]="errorForm">
                     </calendar-list-cmp>
