fixed metafilter component

--- a/app/components/meta-filter-components/metafilter.component.html
+++ b/app/components/meta-filter-components/metafilter.component.html
@@ -1,8 +1,8 @@
-<metafilter-heading-cmp [name]="metadata.Name" [group]="propertyForm"></metafilter-heading-cmp>
+<metafilter-heading-cmp [name]="metadataView.Name" [group]="propertyForm"></metafilter-heading-cmp>
 
 <div [formGroup]="propertyForm">
     <div formGroupName="MetaDataTmp">
-        <div *ngFor="let subtype of metadata.MetaDataSubTypes">
+        <div *ngFor="let subtype of metadataView.MetaDataSubTypes">
             <select-tags-field-cmp [data]="propertyForm.controls.MetaDataTmp.controls['type_' + subtype.Id].value"
                                    [subtype]="subtype"
                                    [group]="propertyForm.controls.MetaDataTmp"></select-tags-field-cmp>
