--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -87,34 +87,37 @@
                                 <propertymarketing-cmp [group]="propertyForm"></propertymarketing-cmp>
                             </div>
 
-                            <div id="metatab-property-4" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="propertiesService.metadata.length"
-                                                         [group]="propertyForm"
-                                                         [metadata]="propertiesService.metadata[3]"></property-metafilter-cmp>
-                            </div>
+                            <!--<div id="metatab-property-4" class="card-content p-b-none p-t-none">-->
+                                <!--<property-metafilter-cmp *ngIf="propertiesService.metadata.length"-->
+                                                         <!--[group]="propertyForm"-->
+                                                         <!--[metadata]="propertiesService.metadata[3]"></property-metafilter-cmp>-->
+                            <!--</div>-->
 
-                            <div id="metatab-property-3" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="propertiesService.metadata.length"
-                                                         [group]="propertyForm"
-                                                         [metadata]="propertiesService.metadata[2]"></property-metafilter-cmp>
-                            </div>
+                            <!--<div id="metatab-property-3" class="card-content p-b-none p-t-none">-->
+                                <!--<property-metafilter-cmp *ngIf="propertiesService.metadata.length"-->
+                                                         <!--[group]="propertyForm"-->
+                                                         <!--[metadata]="propertiesService.metadata[2]"></property-metafilter-cmp>-->
+                            <!--</div>-->
 
                             <div id="metatab-property-6" class="card-content p-b-none p-t-none">
                                 <property-metafilter-cmp *ngIf="propertiesService.metadata.length"
                                                          [group]="propertyForm"
-                                                         [metadata]="propertiesService.metadata[5]"></property-metafilter-cmp>
+                                                         [metadataId]="6"
+                                                         [metadata]="propertiesService.metadata"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-2" class="card-content p-b-none p-t-none">
                                 <property-metafilter-cmp *ngIf="propertiesService.metadata.length"
                                                          [group]="propertyForm"
-                                                         [metadata]="propertiesService.metadata[1]"></property-metafilter-cmp>
+                                                         [metadataId]="3"
+                                                         [metadata]="propertiesService.metadata"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-1" class="card-content p-b-none p-t-none">
                                 <property-metafilter-cmp *ngIf="propertiesService.metadata.length"
                                                          [group]="propertyForm"
-                                                         [metadata]="propertiesService.metadata[0]"></property-metafilter-cmp>
+                                                         [metadataId]="1"
+                                                         [metadata]="propertiesService.metadata"></property-metafilter-cmp>
                             </div>
                         </div>
                     </div>
