fixed metafilter component

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -160,7 +160,9 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <property-metafilter-cmp [group]="propertyForm" [metadata]="propertiesService.metadata[4]"
+                            <property-metafilter-cmp [group]="propertyForm"
+                                                     [metadataId]="5"
+                                                     [metadata]="propertiesService.metadata"
                                                      #villadescription></property-metafilter-cmp>
                         </div>
                     </div>
