--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -79,10 +79,42 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12">
+                        <div class="col-xs-3">
                             <div class="form-group label-floating">
-                                <label class="control-label">Address</label>
-                                <input type="text" class="form-control" formControlName="Address">
+                                <label class="control-label">Address 1</label>
+                                <input type="text" class="form-control" formControlName="AddressLine1">
+                            </div>
+                        </div>
+                        <div class="col-xs-3">
+                            <div class="form-group label-floating">
+                                <label class="control-label">Address 2</label>
+                                <input type="text" class="form-control" formControlName="AddressLine2">
+                            </div>
+                        </div>
+                        <div class="col-xs-3">
+                            <div class="form-group label-floating">
+                                <label class="control-label">Post code / Zip Code</label>
+                                <input type="text" class="form-control" formControlName="AddressPostalCode">
+                            </div>
+                        </div>
+                        <div class="col-xs-3">
+                            <div class="form-group label-floating">
+                                <label class="control-label">Country</label>
+                                <input type="text" class="form-control" formControlName="AddressCountry">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <div class="form-group label-floating">
+                                <label class="control-label">Longitude</label>
+                                <input type="text" class="form-control" formControlName="Longitude">
+                            </div>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="form-group label-floating">
+                                <label class="control-label">Latitude</label>
+                                <input type="text" class="form-control" formControlName="Latitude">
                             </div>
                         </div>
                     </div>
