--- a/app/pages/properties/marketing/propertymarketing.component.html
+++ b/app/pages/properties/marketing/propertymarketing.component.html
@@ -11,9 +11,9 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="form-group label-floating"
-                 [ngClass]="{'form-error': !propertyForm.controls['AssetsUrl'].valid}">
+                 [ngClass]="{'form-error': !propertyForm.controls['PropertyAssetsUrl'].valid}">
                 <label class="control-label">Property assets URL</label>
-                <input type="text" class="form-control" formControlName="AssetsUrl" #agencyUrl>
+                <input type="text" class="form-control" formControlName="PropertyAssetsUrl" #agencyUrl>
             </div>
         </div>
     </div>
