--- a/app/components/meta-filter-heading/meta-filter-heading.component.html
+++ b/app/components/meta-filter-heading/meta-filter-heading.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="propertyForm" *ngIf="name == 'Services'" class="">
+<div [formGroup]="propertyForm" *ngIf="name == 'Local Activities'" class="">
     <div class="row">
         <div class="col-xs-12">
             <div id="childrenAllow" class="radio">
