--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -36,6 +36,7 @@
                     </div>
                     <calendar-cmp *ngIf="isCalendarView && bookingDays"
                                   [bookingDays]="bookingDays"
+                                  [calendarEntryTypes]="calendarEntryTypes"
                                   [group]="availabilityForm">
                     </calendar-cmp>
                     <calendar-list-cmp *ngIf="!isCalendarView"
